--- a/app/src/main/res/layout/movie_cast_item.xml
+++ b/app/src/main/res/layout/movie_cast_item.xml
@@ -22,6 +22,7 @@
             android:id="@+id/movie_cast_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/sample_cast_img1" />
     </androidx.cardview.widget.CardView>
 
