--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -257,7 +257,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/movie_season_viewpager"
                 android:layout_width="0dp"
-                android:layout_height="550dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
