--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -30,6 +30,6 @@
 
     <color name="logo">#F5F5F1</color>
     <color name="slider_active_indicator">#ffffff</color>
-    <color name="slider_inactive_indicator">#252525</color>
+    <color name="slider_inactive_indicator">#2E2E2E</color>
 
 </resources>
