--- a/app/src/main/res/layout/movie_season_item.xml
+++ b/app/src/main/res/layout/movie_season_item.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:alpha="0.6"
-            android:fontFamily="@font/gilroy_bold"
+            android:fontFamily="@font/gilroy_regular"
             android:text="E1 • 29 Jan 2021 • 21m"
             android:textColor="@color/text_subtitle"
             android:textSize="12sp"
