--- a/app/src/main/res/layout/pricing_item.xml
+++ b/app/src/main/res/layout/pricing_item.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/gilroy_bold"
                 android:text="Free"
                 android:textColor="@color/text_title"
                 android:textSize="22sp"
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="3dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/gilroy_regular"
                     android:text="Free Movies / Series"
                     android:textColor="@color/text_subtitle"
                     android:textSize="12sp"
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/gilroy_regular"
                     android:text="Live TV"
                     android:textColor="@color/text_subtitle"
                     android:textSize="12sp"
@@ -112,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/gilroy_regular"
                     android:text="Prime Movies / Series"
                     android:textColor="@color/text_subtitle"
                     android:textSize="12sp"
@@ -135,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/gilroy_regular"
                     android:text="Request Movies / Series"
                     android:textColor="@color/text_subtitle"
                     android:textSize="12sp"
