--- a/app/src/main/res/layout/pricing_item.xml
+++ b/app/src/main/res/layout/pricing_item.xml
@@ -169,13 +169,13 @@
                     android:backgroundTint="@color/recharge_layout"
                     android:clickable="true"
                     android:focusable="true"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/gilroy_bold"
                     android:gravity="center"
-                    android:paddingTop="9dp"
-                    android:paddingBottom="6dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:text="Recharge "
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
