--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -36,4 +36,9 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <!-- Slide Animation -->
+    <style name="SlideAnimation">
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
+
 </resources>
